html_v2/css/style.css
html, body {
	width: 100%;
	height: 100%;
	border: 0px;
	padding: 0px;
	margin: 0px;
	background-color: black;
	overflow:hidden;
	font-family: 'Cardo', serif;
	font-size: 16px;
}
html, body {
	/*cursor:none;*/
}

#overlay {
	width:200px;
	color:#fff;
	background-color:rgba(0,0,0,.6);
	position: absolute;
	z-index: 110;
	right:0px;
	padding: 28px;
	font-size:12px;
}

#title {
	font-size: 16px;
}

#spacer {
	width:145px;
	height: 24px;
}

#lyrics {
	visibility: hidden;
}

#calltoaction {
	z-index: 120;
	position: relative;
	top: 50%;
	transform: translateY(-50%);
	font-size:50px;
	color:#fff;
	padding-left:50px;
}

.button {
	font-size: 16px;
	background-color:#fff;
	color:#000;
	min-width:70px;
	margin:0px 10px 10px 0px;
	padding: 4px;
	float: left;
	cursor: pointer;
}

.button:hover {
	background-color:#000;
	color:#fff;
}

